<resources>
    <string name="app_name">tabi</string>
    <string name="title_today">Today</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_journey">Journey</string>
    <string name="title_explore">Dashboard</string>
    <string name="title_profile">Journey</string>
    <string name="facebook_app_id">1041335986200492</string>
    <string name="fb_login_protocol_scheme">fb1041335986200492</string>
</resources>
